@@ -38,6 +38,7 @@
 	    ("kahua-database-directory" ,kahua-database-directory "_work/database")
 	    ("kahua-temporary-directory" ,kahua-temporary-directory "_work/tmp")
 	    ("kahua-log-directory" ,kahua-log-directory "_work/logs")
+	    ("kahua-cgilog-directory" ,kahua-cgilog-directory "_work/cgilogs")
 	    ("kahua-run-directory" ,kahua-run-directory "_work/run")
 	    ("kahua-etc-directory" ,kahua-etc-directory "_work/etc")
 	    ("kahua-userconf-file" ,kahua-userconf-file "_work/etc/user.conf")
@@ -66,6 +67,7 @@
 	    ("kahua-database-directory" ,kahua-database-directory "_site/database")
 	    ("kahua-temporary-directory" ,kahua-temporary-directory "_site/tmp")
 	    ("kahua-log-directory" ,kahua-log-directory "_site/logs")
+	    ("kahua-cgilog-directory" ,kahua-cgilog-directory "_site/cgilogs")
 	    ("kahua-run-directory" ,kahua-run-directory "_site/run")
 	    ("kahua-etc-directory" ,kahua-etc-directory "_site/etc")
 	    ("kahua-userconf-file" ,kahua-userconf-file "_site/etc/user.conf")
