@@ -1,3 +1,14 @@
+2008-10-29  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: plugins/Makefile.in, cgi/Makefile.in, src/Makefile.in
+	  Now do not make $(localstatedir) and so on.  These are needed when Kahua run on
+	  old fashion working directory.
+
+	* Change: src/kahua/config.scm.in, test/config.scm, configure.ac
+	  Now Kahua run on any site bundle only, so drop obsolete code and configure options. 
+	  Add cgilogs to default site bundle for CGI logging.  So now default value of
+	  --with-cgilogdir is "cgilogs", it's under site-root.
+
 2008-10-28  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: src/Makefile.in
